--- a/.github/workflows/deploy-cdk.yml
+++ b/.github/workflows/deploy-cdk.yml
@@ -7,6 +7,9 @@ on:
       - main
 env:
   AWS_REGION : "ap-northeast-1"
+permissions:
+  id-token: write # This is required for requesting the JWT
+  contents: read  # This is required for actions/checkout
 jobs:
   Explore-GitHub-Actions:
     runs-on: ubuntu-latest
