--- a/.github/workflows/deploy-cdk.yml
+++ b/.github/workflows/deploy-cdk.yml
@@ -32,7 +32,7 @@ jobs:
         uses: aws-actions/configure-aws-credentials@v1
         with:
           aws-region: ${{ env.AWS_REGION }}
-          role-to-assume: arn:aws:iam::319960151867:role/AAProject
+          role-to-assume: arn:aws:iam::319960151867:role/cdk-hnb659fds-cfn-exec-role-319960151867-ap-northeast-1
 
       - name: Install cdk
         run: node --version && npm install -g aws-cdk && cdk --version
